# microfluidic_control_system1

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_frontend.bat
backend/: README.md
backend/orchestrator/: README.md  __init__.py  config.py  flow.py  models.py  service.py  state.py  vision_adapter.py
backend/pid_control/: README.md  __init__.py  base.py  config.py  diameter_pid.py  models.py  service.py
backend/pump_hardware/: README.md  __init__.py  client.py  config.py  models.py  protocol.py  service.py
backend/vision/: README.md  __init__.py  bead_counter.py  camera_discovery.py  config.py  detector.py  kalman_tracker.py  metrics.py  models.py  nearest_tracker.py  pipeline.py  requirements.txt  run_vision.py  service.py  tracker.py
backend/vision/camera_adapters/: base.py  hikrobot_camera.py  opencv_camera.py
backend/vision/cameras/: __init__.py  base.py  camera_diagnostic.py  frame_converter.py  manager.py  models.py  registry.py
backend/vision/cameras/adapters/: allied_vision_adapter.py  alliedvision_camera.py  (+12 more)
backend/vision/legacy/: README.md  droplet_tracking_and_counting(2)(1).py  droplet_tracking_connected_40mum(1).py  rotate_video_90ccw(1).py
backend/vision/preprocess/: README.md  rotate_video.py
docs/: system_flow.md
frontend/: README.md  __init__.py  app.py  config.py  run.py
frontend/components/: __init__.py  control_buttons.py  pump_panel.py  recognition_panel.py  status_panel.py
frontend/pages/: __init__.py  init_page.py  monitor_page.py  parameter_page.py  status_page.py  video_source_page.py
